test_programs/compile_failure/noirc_frontend_tests_errors_on_cyclic_globals/src/main.nr

    pub comptime global A: u32 = B;
    pub comptime global B: u32 = A;

    fn main() { }
    